feat: lexer for all elisp tokens