@@ -7,10 +7,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.Test;
 
 import com.oracle.truffle.api.source.Source;
@@ -21,6 +17,7 @@ import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.BackQuote;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.BoolVec;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.ByteCodeOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Char;
+import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.CharTableOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.CircularDef;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.CircularRef;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Dot;
@@ -32,12 +29,17 @@ import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.ParenOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Quote;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.RecordOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.SetLexicalBindingMode;
+import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.SkipToEnd;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.SquareClose;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.SquareOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Str;
+import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.StrWithPropsOpen;
+import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.SubCharTableOpen;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Symbol;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.Unquote;
 import party.iroiro.juicemacs.elisp.parser.ELispLexer.TokenData.UnquoteSplicing;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class ELispLexerTest {
 
@@ -56,25 +58,25 @@ public class ELispLexerTest {
 
     // https://www.gnu.org/software/emacs/manual/html_node/elisp/Integer-Basics.html
     private static final Object[] INTEGER_TESTS = {
-        "1", 1,
-        "1.", 1,
-        "+1", 1,
-        "-1", -1,
-        "0", 0,
-        "-0", 0,
-        "#b101100", 44,
-        "#o54", 44,
-        "#x2c", 44,
-        "#24r1k", 44,
-        "#xffffffffffffffffffffffffffffffffffffffffffffffff",
-        new BigInteger("ffffffffffffffffffffffffffffffffffffffffffffffff", 16),
+            "1", 1,
+            "1.", 1,
+            "+1", 1,
+            "-1", -1,
+            "0", 0,
+            "-0", 0,
+            "#b101100", 44,
+            "#o54", 44,
+            "#x2c", 44,
+            "#24r1k", 44,
+            "#xffffffffffffffffffffffffffffffffffffffffffffffff",
+            new BigInteger("ffffffffffffffffffffffffffffffffffffffffffffffff", 16),
     };
 
     @Test
     public void testFixNumToken() throws IOException {
-        for (String suffix : new String[] { "", " ", ")", "(" }) {
+        for (String suffix : new String[]{"", " ", ")", "("}) {
             for (int i = 0; i < INTEGER_TESTS.length; i += 2) {
-                ELispLexer lexer = lexer(((String) INTEGER_TESTS[i]) + suffix);
+                ELispLexer lexer = lexer(INTEGER_TESTS[i] + suffix);
                 assertTrue(lexer.hasNext());
                 Object expected = INTEGER_TESTS[i + 1];
                 NumberVariant expectedNum;
@@ -88,7 +90,7 @@ public class ELispLexerTest {
                         lexer.next().data()
                 );
                 assertTrue(lexer.hasNext());
-                if (suffix.equals("") || suffix.equals(" ")) {
+                if (suffix.isEmpty() || suffix.equals(" ")) {
                     assertEquals(new EOF(), lexer.next().data());
                     assertFalse(lexer.hasNext());
                 }
@@ -98,22 +100,22 @@ public class ELispLexerTest {
 
     // https://www.gnu.org/software/emacs/manual/html_node/elisp/Float-Basics.html
     private static final Object[] FLOAT_TESTS = {
-        "1500.0", 1500.0,
-        "+15e2", 1500.0,
-        "15.0e+2", 1500.0,
-        "+1500000e-3", 1500.0,
-        ".15e4", 1500.0,
-        "-0.0", -0.0,
-        "0.0", 0.0,
-        "+0.0", 0.0,
-        "1.0e+INF", Double.POSITIVE_INFINITY,
-        "-1.0e+INF", Double.NEGATIVE_INFINITY,
-        "0.0e+NaN", Double.NaN,
-        "-0.0e+NaN", Double.NaN,
-        "1.0e+NaN", Double.NaN,
-        "-1.0e+NaN", Double.NaN,
-        "2251799813685247.0e+NaN", Double.NaN,
-        "2251799813685248.0e+NaN", Double.NaN,
+            "1500.0", 1500.0,
+            "+15e2", 1500.0,
+            "15.0e+2", 1500.0,
+            "+1500000e-3", 1500.0,
+            ".15e4", 1500.0,
+            "-0.0", -0.0,
+            "0.0", 0.0,
+            "+0.0", 0.0,
+            "1.0e+INF", Double.POSITIVE_INFINITY,
+            "-1.0e+INF", Double.NEGATIVE_INFINITY,
+            "0.0e+NaN", Double.NaN,
+            "-0.0e+NaN", Double.NaN,
+            "1.0e+NaN", Double.NaN,
+            "-1.0e+NaN", Double.NaN,
+            "2251799813685247.0e+NaN", Double.NaN,
+            "2251799813685248.0e+NaN", Double.NaN,
     };
 
     @Test
@@ -123,11 +125,14 @@ public class ELispLexerTest {
             double expected = (Double) FLOAT_TESTS[i + 1];
             Num actual = (Num) lexer.next().data();
             if (Double.isNaN(expected)) {
-                assertTrue(Double.isNaN(((NumberVariant.Float) actual.value()).value()), (String) FLOAT_TESTS[i]);
+                assertTrue(
+                        Double.isNaN(((NumberVariant.Float) actual.value()).value()),
+                        (String) FLOAT_TESTS[i]
+                );
             } else {
                 assertEquals(
-                    new Num(new NumberVariant.Float(expected)),
-                    actual
+                        new Num(new NumberVariant.Float(expected)),
+                        actual
                 );
             }
         }
@@ -135,54 +140,54 @@ public class ELispLexerTest {
 
     // https://www.gnu.org/software/emacs/manual/html_node/elisp/Character-Type.html
     private static final Object[] CHAR_TESTS = {
-        "?A", (int) 'A',
-        "?B", (int) 'B',
-        "?a", (int) 'a',
-        "?Q", 81,
-        "?q", 113,
-        "?\\(", (int) '(',
-        "?\\\\", (int) '\\',
-        "?\\a", 7,
-        "?\\b", 8,
-        "?\\t", 9,
-        "?\\n", 10,
-        "?\\v", 11,
-        "?\\f", 12,
-        "?\\r", 13,
-        "?\\e", 27,
-        "?\\s", 32,
-        "?\\d", 127,
-        "?\\+", (int) '+',
-        "?\\;", (int) ';',
-        "?\\|", (int) '|',
-        "?\\'", (int) '\'',
-        "?\\`", (int) '`',
-        "?\\#", (int) '#',
-        "?\\u00e0", (int) '\u00e0',
-        "?\\U000000E0", (int) '\u00e0',
-        "?\\N{LATIN SMALL LETTER A WITH GRAVE}", (int) '\u00e0',
-        "?\\N{LATIN SMALL  LETTER   A\n\nWITH\r\n\tGRAVE}", (int) '\u00e0',
-        "?\\N", (int) 'N',
-        "?\\x41", (int) 'A',
-        "?\\x1", 1,
-        "?\\xe0", (int) '\u00e0',
-        "?\\001", 1,
-        "?\\002", 2,
-        "?\\^", -1, // Emacs behavior
-        "?\\^中", 67128877,
-        "?\\^I", 9,
-        "?\\^i", 9,
-        "?\\C-J", 10,
-        "?\\C-j", 10,
-        "?\\C", (int) 'C',
-        "?\\^@", 0,
-        "?\\^1", 67108913,
-        "?\\^?", 127,
-        "?\\C-?", 127,
-        "?\\M-\\C-b", 134217730,
-        "?\\M-\\002", 134217730,
-        "?\\S-\\002", 33554434,
-        "?\\H-\\M-\\A-x", 155189368,
+            "?A", (int) 'A',
+            "?B", (int) 'B',
+            "?a", (int) 'a',
+            "?Q", 81,
+            "?q", 113,
+            "?\\(", (int) '(',
+            "?\\\\", (int) '\\',
+            "?\\a", 7,
+            "?\\b", 8,
+            "?\\t", 9,
+            "?\\n", 10,
+            "?\\v", 11,
+            "?\\f", 12,
+            "?\\r", 13,
+            "?\\e", 27,
+            "?\\s", 32,
+            "?\\d", 127,
+            "?\\+", (int) '+',
+            "?\\;", (int) ';',
+            "?\\|", (int) '|',
+            "?\\'", (int) '\'',
+            "?\\`", (int) '`',
+            "?\\#", (int) '#',
+            "?\\u00e0", (int) 'à',
+            "?\\U000000E0", (int) 'à',
+            "?\\N{LATIN SMALL LETTER A WITH GRAVE}", (int) 'à',
+            "?\\N{LATIN SMALL  LETTER   A\n\nWITH\r\n\tGRAVE}", (int) 'à',
+            "?\\N", (int) 'N',
+            "?\\x41", (int) 'A',
+            "?\\x1", 1,
+            "?\\xe0", (int) 'à',
+            "?\\001", 1,
+            "?\\002", 2,
+            "?\\^", -1, // Emacs behavior
+            "?\\^中", 67128877,
+            "?\\^I", 9,
+            "?\\^i", 9,
+            "?\\C-J", 10,
+            "?\\C-j", 10,
+            "?\\C", (int) 'C',
+            "?\\^@", 0,
+            "?\\^1", 67108913,
+            "?\\^?", 127,
+            "?\\C-?", 127,
+            "?\\M-\\C-b", 134217730,
+            "?\\M-\\002", 134217730,
+            "?\\S-\\002", 33554434,
+            "?\\H-\\M-\\A-x", 155189368,
     };
 
     @Test
@@ -200,47 +205,47 @@ public class ELispLexerTest {
     public void testStructuralToken() throws IOException {
         // Paren
         assertEquals(Arrays.asList(
-            new ParenOpen(),
-            new Symbol("a"),
-            new ParenClose(),
-            new EOF()
+                new ParenOpen(),
+                new Symbol("a", true, true),
+                new ParenClose(),
+                new EOF()
         ), lex("(a)"));
         // Square
         assertEquals(Arrays.asList(
-            new SquareOpen(),
-            new Symbol("a"),
-            new SquareClose(),
-            new EOF()
+                new SquareOpen(),
+                new Symbol("a", true, true),
+                new SquareClose(),
+                new EOF()
         ), lex("[a]"));
         // Quotes
         assertEquals(Arrays.asList(
-            new Quote(),
-            new Symbol("a"),
-            new EOF()
+                new Quote(),
+                new Symbol("a", true, true),
+                new EOF()
         ), lex("'a"));
         assertEquals(Arrays.asList(
-            new BackQuote(),
-            new Symbol("a"),
-            new EOF()
+                new BackQuote(),
+                new Symbol("a", true, true),
+                new EOF()
         ), lex("`a"));
         assertEquals(Arrays.asList(
-            new Unquote(),
-            new Symbol("a"),
-            new EOF()
+                new Unquote(),
+                new Symbol("a", true, true),
+                new EOF()
         ), lex(",a"));
         assertEquals(Arrays.asList(
-            new UnquoteSplicing(),
-            new Symbol("a"),
-            new EOF()
+                new UnquoteSplicing(),
+                new Symbol("a", true, true),
+                new EOF()
         ), lex(",@a"));
         // Dot
         assertEquals(Arrays.asList(
-            new ParenOpen(),
-            new Symbol("a"),
-            new Dot(),
-            new Symbol("b"),
-            new ParenClose(),
-            new EOF()
+                new ParenOpen(),
+                new Symbol("a", true, true),
+                new Dot(),
+                new Symbol("b", true, true),
+                new ParenClose(),
+                new EOF()
         ), lex("(a . b)"));
     }
 
@@ -250,101 +255,200 @@ public class ELispLexerTest {
         assertTrue(lexer.hasNext());
         assertEquals(new EOF(), lexer.next().data());
         assertFalse(lexer.hasNext());
-        assertEquals(null, lexer.next());
+        assertNull(lexer.next());
     }
 
     @Test
     public void testComment() throws IOException {
-        assertEquals(Arrays.asList(
-            new EOF()
+        assertEquals(List.of(
+                new EOF()
         ), lex(";a"));
-        assertEquals(Arrays.asList(
-            new EOF()
+        assertEquals(List.of(
+                new EOF()
         ), lex("\n;a\n"));
+        assertEquals(List.of(
+                new EOF()
+        ), lex("\n\n;a\n"));
         assertEquals(Arrays.asList(
-            new SetLexicalBindingMode(true),
-            new EOF()
+                new SetLexicalBindingMode(true),
+                new EOF()
         ), lex(";; -*- lexical-binding: t -*-"));
         assertEquals(Arrays.asList(
-            new SetLexicalBindingMode(false),
-            new EOF()
+                new SetLexicalBindingMode(true),
+                new EOF()
+        ), lex("#!/bin/emacs -e\n;; -*- lexical-binding: t -*-"));
+        assertEquals(List.of(
+                new EOF()
+        ), lex("#!/bin/emacs -e\n;;\n;; -*- lexical-binding: t -*-"));
+        assertEquals(Arrays.asList(
+                new SetLexicalBindingMode(false),
+                new EOF()
         ), lex(";; -*- lexical-binding: nil -*-"));
+        assertEquals(List.of(
+                new EOF()
+        ), lex("#!\n#!\n#! effectively a comment"));
     }
 
     @Test
     public void testHashTokens() throws IOException {
         assertEquals(Arrays.asList(
-            new Function(),
-            new Symbol("a"),
-            new EOF()
+                new Function(),
+                new Symbol("a", true, true),
+                new EOF()
         ), lex("#'a"));
         assertEquals(Arrays.asList(
-            new Symbol("a"),
-            new EOF()
+                new Symbol("a", false, true),
+                new EOF()
         ), lex("#:a"));
         assertEquals(Arrays.asList(
-            new ByteCodeOpen(),
-            new Symbol("a"),
-            new SquareClose(),
-            new EOF()
+                new Symbol("", false, true),
+                new EOF()
+        ), lex("#:"));
+        assertEquals(Arrays.asList(
+                new Symbol("a", true, false),
+                new EOF()
+        ), lex("#_a"));
+        assertEquals(Arrays.asList(
+                new Symbol("", true, true),
+                new EOF()
+        ), lex("#_"));
+        assertEquals(Arrays.asList(
+                new ByteCodeOpen(),
+                new Symbol("a", true, true),
+                new SquareClose(),
+                new EOF()
         ), lex("#[a]"));
         assertEquals(Arrays.asList(
-            new BoolVec(10, "test"),
-            new EOF()
+                new BoolVec(10, "test"),
+                new EOF()
         ), lex("#&10\"test\""));
         assertEquals(Arrays.asList(
-            new RecordOpen(),
-            new Symbol("a"),
-            new ParenClose(),
-            new EOF()
+                new RecordOpen(),
+                new Symbol("a", true, true),
+                new ParenClose(),
+                new EOF()
         ), lex("#s(a)"));
         assertEquals(Arrays.asList(
-            new ParenOpen(),
-            new CircularDef(1),
-            new Symbol("a"),
-            new CircularRef(1),
-            new ParenClose(),
-            new EOF()
+                new ParenOpen(),
+                new CircularDef(1),
+                new Symbol("a", true, true),
+                new CircularRef(1),
+                new ParenClose(),
+                new EOF()
         ), lex("(#1=a #1#)"));
+        assertEquals(Arrays.asList(
+                new Symbol("", true, true),
+                new EOF()
+        ), lex("##"));
+        assertEquals(Arrays.asList(
+                new CharTableOpen(),
+                new SquareClose(),
+                new EOF()
+        ), lex("#^[]"));
+        assertEquals(Arrays.asList(
+                new SubCharTableOpen(),
+                new SquareClose(),
+                new EOF()
+        ), lex("#^^[]"));
+        assertEquals(Arrays.asList(
+                new StrWithPropsOpen(),
+                new ParenClose(),
+                new EOF()
+        ), lex("#()"));
+        assertEquals(List.of(
+                new EOF()
+        ), lex("#!"));
+        assertEquals(List.of(
+                new SkipToEnd()
+        ), lex("#@00"));
+        assertEquals(Arrays.asList(
+                new Symbol("test", true, true),
+                new EOF()
+        ), lex("#@0skipped\037test"));
+        assertEquals(Arrays.asList(
+                new Symbol("test", true, true),
+                new EOF()
+        ), lex("#@07skipped\037test"));
+        assertEquals(Arrays.asList(
+                ELispLexer.NIL_SYMBOL,
+                new EOF()
+        ), lex("#$"));
+    }
+
+    @Test
+    public void testDot() throws IOException {
+        for (String s : new String[]{
+                ".",
+                ". 0",
+                ".\u00A01",
+                ".\"a\"",
+                ".'a",
+                ".;1",
+                ".(1)",
+                ".[1]",
+                ".#1",
+                ".?1",
+                ".`a",
+                ".,1",
+        }) {
+            assertEquals(new Dot(), lex(s).getFirst());
+        }
     }
 
     @Test
     public void testStr() throws IOException {
         assertEquals(Arrays.asList(
-            new Str("test"),
-            new EOF()
+                new Str("test"),
+                new EOF()
         ), lex("\"test\""));
         assertEquals(Arrays.asList(
-            new Str("\n"),
-            new EOF()
+                new Str("\n"),
+                new EOF()
         ), lex("\"\\n\\ \\\n\""));
         assertEquals(Arrays.asList(
-            new Str("\u00b1"),
-            new EOF()
+                new Str("±"),
+                new EOF()
         ), lex("\"\\M-1\""));
         assertEquals(Arrays.asList(
-            new Str("8@8[8`8{"),
-            new EOF()
+                new Str("8@8[8`8{"),
+                new EOF()
         ), lex("\"\\70@\\70[\\70`\\70{\""));
     }
 
+    private static final String[] SYMBOL_TESTS = new String[]{
+            "a\\ b", "a b",
+            "a\u00A0b", "a",
+            "中日韩", "中日韩",
+            "a\"\"", "a",
+            "a'a", "a",
+            "a;a", "a",
+            "a#1", "a",
+            "a(1)", "a",
+            "a[1]", "a",
+            "a)1", "a",
+            "a]1", "a",
+            "a`1", "a",
+            "a,1", "a",
+            " \r\n\ta", "a",
+    };
+
     @Test
     public void testSymbol() throws IOException {
-        assertEquals(Arrays.asList(
-            new Symbol("a b"),
-            new EOF()
-        ), lex("a\\ b"));
+        for (int i = 0; i < SYMBOL_TESTS.length; i += 2) {
+            String expected = SYMBOL_TESTS[i + 1];
+            assertEquals(new Symbol(expected, true, true), lex(SYMBOL_TESTS[i]).getFirst());
+        }
     }
 
     @Test
     public void testUnicode() throws IOException {
         assertEquals(Arrays.asList(
-            new Symbol("🀄"),
-            new EOF()
+                new Symbol("🀄", true, true),
+                new EOF()
         ), lex("🀄"));
         assertEquals(Arrays.asList(
-            new Char(126980),
-            new EOF()
+                new Char(126980),
+                new EOF()
         ), lex("?🀄"));
     }
 
@@ -355,19 +459,21 @@ public class ELispLexerTest {
 
     @Test
     public void testUntimelyEOF() {
-        for (String input : new String[] {
-            "\"",
-            "?\\u12",
-            "?",
-            "?\\",
+        for (String input : new String[]{
+                "\"",
+                "?\\u12",
+                "?",
+                "?\\",
+                "#s",
         }) {
             assertError(input, "Unexpected EOF");
         }
     }
 
     @Test
-    public void testErrors() {
+    public void testErrors() throws IOException {
         assertError("\ud83c\u0000", "Invalid Unicode surrogate pair");
+        assertError("\"\\A-1\"", "Invalid modifier in string");
 
         assertError("'(?\\u00)", "Expecting fixed number of digits");
         assertError("'?\\u00z", "Expecting fixed number of digits");
@@ -375,12 +481,21 @@ public class ELispLexerTest {
 
         assertError("#xfrf", "Invalid base");
         assertError("#40rz", "Invalid base");
+        lex("#x1@");
+        lex("#x1:");
+        lex("#x1[");
+        lex("#x1{");
         assertError("#xffz", "Invalid character");
+        assertError("#xFFZ", "Invalid character");
+        assertError("#o779", "Invalid character");
         assertError("#16rffz", "Invalid character");
         assertError("#z", "Expected a number base indicator");
 
         assertError("#&0", "Expected '\"'");
-        assertError("#s", "Expected '('");
+        assertError("#s[", "Expected '('");
+        assertError("#^__", "Expected '^' or '['");
+        assertError("#^^^[]", "Expected '^' or '['");
+
     }
 
 }
